@@ -31,19 +31,7 @@
 
 #include <libtransmission/transmission.h>
 #include <libtransmission/makemeta.h>
-
-#ifdef __BEOS__
-    #include <kernel/OS.h>
-    #define wait_msecs(N)  snooze( (N) * 1000 )
-    #define wait_secs(N)   sleep( (N) )
-#elif defined(WIN32)
-    #include <windows.h>
-    #define wait_msecs(N)  Sleep( (N) )
-    #define wait_secs(N)   Sleep( (N) * 1000 )
-#else
-    #define wait_msecs(N)  usleep( (N) * 1000 )
-    #define wait_secs(N)   sleep( (N) )
-#endif
+#include <libtransmission/utils.h> /* tr_wait */
 
 /* macro to shut up "unused parameter" warnings */
 #ifdef __GNUC__
@@ -65,17 +53,13 @@ const char * USAGE =
 "  -i, --info           Print metainfo and exit\n"
 "  -n  --nat-traversal  Attempt NAT traversal using NAT-PMP or UPnP IGD\n"
 "  -p, --port <int>     Port we should listen on (default = %d)\n"
-#if 0
 "  -s, --scrape         Print counts of seeders/leechers and exit\n"
-#endif
 "  -u, --upload <int>   Maximum upload rate (-1 = no limit, default = 20)\n"
 "  -v, --verbose <int>  Verbose level (0 to 2, default = 0)\n";
 
 static int           showHelp      = 0;
 static int           showInfo      = 0;
-#if 0
 static int           showScrape    = 0;
-#endif
 static int           isPrivate     = 0;
 static int           verboseLevel  = 0;
 static int           bindPort      = TR_DEFAULT_PORT;
@@ -168,7 +152,7 @@ int main( int argc, char ** argv )
         tr_metainfo_builder * builder = tr_metaInfoBuilderCreate( h, sourceFile );
         tr_makeMetaInfo( builder, torrentPath, announce, comment, isPrivate );
         while( !builder->isDone ) {
-            wait_msecs( 1 );
+            tr_wait( 1000 );
             printf( "." );
         }
         ret = !builder->failed;
@@ -224,25 +208,31 @@ int main( int argc, char ** argv )
 
         goto cleanup;
     }
-
-#if 0
+    
     if( showScrape )
     {
-        int seeders, leechers, downloaded;
-
-        if( tr_torrentScrape( tor, &seeders, &leechers, &downloaded ) )
+        printf( "Scraping, Please wait...\n" );
+        const tr_stat * stats;
+        
+        uint64_t start = tr_date();
+        
+        do
         {
-            printf( "Scrape failed.\n" );
+            stats = tr_torrentStat( tor );
+            if( stats == NULL || tr_date() - start > 20000 )
+            {
+                printf( "Scrape failed.\n" );
+                goto cleanup;
+            }
+            tr_wait( 2000 );
         }
-        else
-        {
-            printf( "%d seeder(s), %d leecher(s), %d download(s).\n",
-                    seeders, leechers, downloaded );
-        }
+        while( stats->completedFromTracker == -1 || stats->leechers == -1 || stats->seeders == -1 );
+        
+        printf( "%d seeder(s), %d leecher(s), %d download(s).\n",
+            stats->seeders, stats->leechers, stats->completedFromTracker );
 
         goto cleanup;
     }
-#endif
 
     signal( SIGINT, sigHandler );
     signal( SIGHUP, sigHandler );
@@ -264,7 +254,7 @@ int main( int argc, char ** argv )
         char string[LINEWIDTH];
         int  chars = 0;
 
-        wait_secs( 1 );
+        tr_wait( 1000 );
 
         if( gotsig )
         {
@@ -289,12 +279,12 @@ int main( int argc, char ** argv )
         if( s->status & TR_STATUS_CHECK_WAIT )
         {
             chars = snprintf( string, sizeof string,
-                "Waiting to verify local files... %.2f %%", 100.0 * s->percentDone );
+                "Waiting to verify local files..." );
         }
         else if( s->status & TR_STATUS_CHECK )
         {
             chars = snprintf( string, sizeof string,
-                "Verifying local files... %.2f %%", 100.0 * s->percentDone );
+                "Verifying local files... %.2f%%, found %.2f%% valid", 100 * s->recheckProgress, 100.0 * s->percentDone );
         }
         else if( s->status & TR_STATUS_DOWNLOAD )
         {
@@ -345,7 +335,7 @@ int main( int argc, char ** argv )
             /* Port mappings were deleted */
             break;
         }
-        wait_msecs( 500 );
+        tr_wait( 500 );
     }
     
 cleanup:
@@ -390,11 +380,9 @@ static int parseCommandLine( int argc, char ** argv )
             case 'i':
                 showInfo = 1;
                 break;
-#if 0
             case 's':
                 showScrape = 1;
                 break;
-#endif
             case 'r':
                 isPrivate = 1;
                 break;
